--- a/.github/workflows/login-deploy.yml
+++ b/.github/workflows/login-deploy.yml
@@ -24,7 +24,7 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
 
-      - name: Crear archivo .env
+      - name: Crear archivo .env con secrets de GitHub
         run: |
           cd login
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
@@ -46,7 +46,7 @@ jobs:
           cd login
           pytest tests/test_connections.py
 
-      - name: Build Docker image
+      - name: Build Docker image (con .env embebido)
         run: |
           cd login
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/login:latest .
@@ -61,7 +61,7 @@ jobs:
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Build Docker image
+      - name: Build Docker image (con .env embebido)
         run: |
           cd login
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/login:latest .
@@ -89,18 +89,6 @@ jobs:
             echo "Descargando última imagen..."
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/login:latest
             echo "Arrancando nuevo contenedor..."
-            docker run -d --name login \
-              -p 1001:1001 \
-              -e DB_HOST=${{ secrets.DB_HOST }} \
-              -e DB_USER=${{ secrets.DB_USER }} \
-              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-              -e DB_NAME=${{ secrets.DB_NAME }} \
-              -e DB_PORT=${{ secrets.DB_PORT }} \
-              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
-              -e EC2_SSH_KEY="${{ secrets.EC2_SSH_KEY }}" \
-              -e DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }} \
-              -e DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} \
-              -e EC2_AUTH_TEST=${{ secrets.EC2_AUTH_TEST }} \
-              ${{ secrets.DOCKERHUB_USERNAME }}/login:latest
+            docker run -d --name login -p 1001:1001 ${{ secrets.DOCKERHUB_USERNAME }}/login:latest
             echo "Logs del contenedor tras el arranque (si falla):"
             docker logs login || true
