--- a/.github/workflows/login-deploy.yml
+++ b/.github/workflows/login-deploy.yml
@@ -121,19 +121,20 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
+            script: |
             cat <<EOF > /home/ubuntu/.env
-            DATABASE_URL=$DATABASE_URL
-            DB_HOST=$DB_HOST
-            DB_NAME=$DB_NAME
-            DB_PASSWORD=$DB_PASSWORD
-            DB_PORT=$DB_PORT
-            DB_USER=$DB_USER
-            DOCKERHUB_TOKEN=$DOCKERHUB_TOKEN
-            DOCKERHUB_USERNAME=$DOCKERHUB_USERNAME
-            EC2_AUTH_TEST=$EC2_AUTH_TEST
-            EC2_SSH_KEY=$EC2_SSH_KEY
-            JWT_SECRET=$JWT_SECRET
-            EOF
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+              DB_HOST=${{ secrets.DB_HOST }}
+              DB_NAME=${{ secrets.DB_NAME }}
+              DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+              DB_PORT=${{ secrets.DB_PORT }}
+              DB_USER=${{ secrets.DB_USER }}
+              DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}
+              DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
+              EC2_AUTH_TEST=${{ secrets.EC2_AUTH_TEST }}
+              EC2_SSH_KEY=${{ secrets.EC2_SSH_KEY }}
+              JWT_SECRET=${{ secrets.JWT_SECRET }}
+              EOF
 
             echo "Deteniendo y eliminando contenedor anterior si existe..."
             docker ps -a --format '{{.Names}}' | grep -Eq "^login$" && docker stop login && docker rm login
