--- a/.github/workflows/login-deploy.yml
+++ b/.github/workflows/login-deploy.yml
@@ -103,50 +103,38 @@ jobs:
     steps:
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v0.1.7
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          EC2_AUTH_TEST: ${{ secrets.EC2_AUTH_TEST }}
-          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         with:
           host: ${{ secrets.EC2_AUTH_TEST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-            script: |
             cat <<EOF > /home/ubuntu/.env
             DATABASE_URL=${{ secrets.DATABASE_URL }}
-              DB_HOST=${{ secrets.DB_HOST }}
-              DB_NAME=${{ secrets.DB_NAME }}
-              DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-              DB_PORT=${{ secrets.DB_PORT }}
-              DB_USER=${{ secrets.DB_USER }}
-              DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}
-              DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
-              EC2_AUTH_TEST=${{ secrets.EC2_AUTH_TEST }}
-              EC2_SSH_KEY=${{ secrets.EC2_SSH_KEY }}
-              JWT_SECRET=${{ secrets.JWT_SECRET }}
-              EOF
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_NAME=${{ secrets.DB_NAME }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            DB_USER=${{ secrets.DB_USER }}
+            DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}
+            DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
+            EC2_AUTH_TEST=${{ secrets.EC2_AUTH_TEST }}
+            EC2_SSH_KEY=${{ secrets.EC2_SSH_KEY }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            EOF
 
             echo "Deteniendo y eliminando contenedor anterior si existe..."
             docker ps -a --format '{{.Names}}' | grep -Eq "^login$" && docker stop login && docker rm login
 
             echo "Descargando última imagen..."
-            docker pull joeli2104/login:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/login:latest
 
             echo "Arrancando nuevo contenedor..."
             docker run -d \
               --name login \
               -p 1001:1001 \
               --env-file /home/ubuntu/.env \
-              joeli2104/login:latest
+              ${{ secrets.DOCKERHUB_USERNAME }}/login:latest
+
             echo "Logs del contenedor tras el arranque (si falla):"
             docker logs login || true
