--- a/.github/workflows/login-deploy.yml
+++ b/.github/workflows/login-deploy.yml
@@ -36,8 +36,6 @@ jobs:
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
           echo "DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}" >> .env
           echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" >> .env
-          echo "EC2_AUTH_TEST=${{ secrets.EC2_AUTH_TEST }}" >> .env
-          echo "EC2_SSH_KEY=${{ secrets.EC2_SSH_KEY }}" >> .env
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
 
       - name: Run static tests
@@ -50,8 +48,6 @@ jobs:
           DB_USER: ${{ secrets.DB_USER }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          EC2_AUTH_TEST: ${{ secrets.EC2_AUTH_TEST }}
-          EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: |
           cd login
@@ -81,8 +77,6 @@ jobs:
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env
           echo "DOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}" >> .env
           echo "DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}" >> .env
-          echo "EC2_AUTH_TEST=${{ secrets.EC2_AUTH_TEST }}" >> .env
-          echo "EC2_SSH_KEY=${{ secrets.EC2_SSH_KEY }}" >> .env
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
 
       - name: Log in to Docker Hub
@@ -125,8 +119,6 @@ jobs:
               -e DB_USER="${{ secrets.DB_USER }}" \
               -e DOCKERHUB_TOKEN="${{ secrets.DOCKERHUB_TOKEN }}" \
               -e DOCKERHUB_USERNAME="${{ secrets.DOCKERHUB_USERNAME }}" \
-              -e EC2_AUTH_TEST="${{ secrets.EC2_AUTH_TEST }}" \
-              -e EC2_SSH_KEY="${{ secrets.EC2_SSH_KEY }}" \
               -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
               ${{ secrets.DOCKERHUB_USERNAME }}/login:latest
             docker logs login || true
@@ -145,21 +137,19 @@ jobs:
           port: 22
           script: |
             docker ps -a --format '{{.Names}}' | grep -Eq "^login$" && docker stop login && docker rm login
-            echo "${{ secrets.DOCKERHUB_TOKEN_PROD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME_PROD }}" --password-stdin
-            docker pull ${{ secrets.DOCKERHUB_USERNAME_PROD }}/login:latest
+            echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/login:latest
             docker run -d \
               --name login \
               -p 1001:1001 \
-              -e DATABASE_URL="${{ secrets.DATABASE_URL_PROD }}" \
-              -e DB_HOST="${{ secrets.DB_HOST_PROD }}" \
-              -e DB_NAME="${{ secrets.DB_NAME_PROD }}" \
-              -e DB_PASSWORD="${{ secrets.DB_PASSWORD_PROD }}" \
-              -e DB_PORT="${{ secrets.DB_PORT_PROD }}" \
-              -e DB_USER="${{ secrets.DB_USER_PROD }}" \
-              -e DOCKERHUB_TOKEN="${{ secrets.DOCKERHUB_TOKEN_PROD }}" \
-              -e DOCKERHUB_USERNAME="${{ secrets.DOCKERHUB_USERNAME_PROD }}" \
-              -e EC2_AUTH_PROD="${{ secrets.EC2_AUTH_PROD }}" \
-              -e EC2_SSH_KEY="${{ secrets.EC2_SSH_KEY_PROD }}" \
-              -e JWT_SECRET="${{ secrets.JWT_SECRET_PROD }}" \
-              ${{ secrets.DOCKERHUB_USERNAME_PROD }}/login:latest
+              -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+              -e DB_HOST="${{ secrets.DB_HOST }}" \
+              -e DB_NAME="${{ secrets.DB_NAME }}" \
+              -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
+              -e DB_PORT="${{ secrets.DB_PORT }}" \
+              -e DB_USER="${{ secrets.DB_USER }}" \
+              -e DOCKERHUB_TOKEN="${{ secrets.DOCKERHUB_TOKEN }}" \
+              -e DOCKERHUB_USERNAME="${{ secrets.DOCKERHUB_USERNAME }}" \
+              -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/login:latest
             docker logs login || true
